# elle

./: .gitignore  00_READ_ME_FIRST.txt  00_START_HERE.txt  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_DIAGRAMS.md  BENCHMARK_EXPLAINED.md  BENCHMARK_INVESTIGATION_GUIDE.md  BENCHMARK_VISUAL.md  BRAINSTORM_SUMMARY.md  BUILD_STATUS.md  CHANGELOG.md  CI_CD_VERIFICATION.md  COMPARISON_TABLE.txt  COMPILER_BACKENDS_RESEARCH.md  COMPLETION_REPORT.txt  CONTRIBUTING.md  CRANELIFT_DIRECT_APPROACH.md  Cargo.toml  DELIVERY_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  ELLE_ARCHITECTURE_DIAGRAMS.md  ELLE_CODEBASE_TECHNICAL_SUMMARY.md  ELLE_LSP_CODE_EXAMPLES.md  ENHANCEMENT_SUMMARY.md  ERROR_ANALYSIS_INDEX.md  ERROR_HANDLING.md  EXECUTIVE_SUMMARY.md  EXPLORATION_RESULTS.txt  FFI_IMPLEMENTATION_CHECKLIST.md  FFI_INTEGRATION_COMPLETE.md  FFI_PHASE_1_COMPLETE.md  FFI_PHASE_2_COMPLETE.md  FINAL_CI_REPORT.txt  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_SUMMARY.txt  GITHUB_ACTIONS_README.md  GITHUB_SETUP.md  IMPLEMENTATION.md  (+122 more)
benches/: benchmarks.rs  cranelift_jit_benchmarks.rs  iai_benchmarks.rs  jit_vs_bytecode.rs  memory.rs
demos/: AGENTS.md  README.md
docs/: AGENTS.md  CONTROL_FLOW.md  DEBUGGING.md  EXCEPT.md  FIBERS.md  LANGUAGE_GUIDE.md  MACROS.md  MACROS_IMPL.md  README.md  SCOPING_GUIDE.md  SEMANTICS.md  WHAT_S_NEW.md  cookbook.md  debugging.md  effects.md  fibers.md  language.md  macros.md  oddities.md  pipeline.md  semantics.md  signals.md  types.md
elle-doc/: AGENTS.md
examples/: AGENTS.md  (+60 more)
plugins/protobuf/spike/: Cargo.toml
plugins/protobuf/spike/src/: main.rs
(+504 files in other folders)
