[package]
name = "elle-protobuf-spike"
version = "0.1.0"
edition = "2021"

[workspace]


[[bin]]
name = "spike"
path = "src/main.rs"

[dependencies]
anyhow = "1"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-types = "0.13"
protobuf = "3"
protobuf-parse = "3"
tempfile = "3"
